--- a/Tomato/Tomato.csproj
+++ b/Tomato/Tomato.csproj
@@ -165,6 +165,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BuildDetailsViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ReturnModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -178,12 +179,19 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\addcirclechart.js" />
     <Content Include="Scripts\addtogrid.js" />
+    <Content Include="Scripts\addtomatochart.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\Wykop API.pubxml" />
+    <None Include="Properties\PublishProfiles\wykopgatherer - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\wykopgatherer - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\brush.js" />
     <Content Include="Scripts\d3.v3.min.js" />
     <Content Include="Scripts\gridster.js" />
+    <Content Include="Scripts\histogram.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -195,6 +203,8 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\scatter.js" />
+    <Content Include="Scripts\table.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
